configuramos el server y el index minimamente, video 3 acabado, tocara el 5

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "tutorial nuevo de crud con notas de fazt https://www.youtube.com/watch?v=o9LCKgRPka4&amp;lc=z23ktvbq5vfyzbg3oacdp432mofan23h5tnxgpidsbdw03c010c.1581775354899681",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
   "repository": {
     "type": "git",
