--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
+    "morgan": "^1.9.1",
     "nodemon": "^2.0.2",
     "npm-check-updates": "^4.0.1"
   }
